# gopro

./: .gitignore  LICENSE  Makefile  README.md  USAGE.md  pyproject.toml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  FUTURE_ROADMAP.md  PIPEWIRE.md  PROJECT.md  README.md  RESEARCH.md  RESEARCH_NOTES.md  TESTING_GUIDE.md
gopro_controller/: __init__.py
gopro_controller/cli/: __init__.py  main.py
gopro_controller/models/: __init__.py  gopro_controller.py  webcam_config.py
gopro_controller/stream_consumers/: __init__.py  base.py  pipewire_consumer.py  v4l2_consumer.py
tests/: test_basic.py
