[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gopro-webcam-controller"
version = "0.1.0"
description = "A CLI and GUI application for controlling GoPro cameras as webcams with low latency"
authors = ["Bruno Fin <bruno@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "gopro_controller"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
open-gopro = "^0.21.2"
rich = "^14"
click = "^8"
pydantic = "^2"
asyncio-mqtt = {version = "^0", optional = true}

[tool.poetry.extras]
gui = ["PyGObject"]
pipewire = ["asyncio-mqtt"]

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-asyncio = "^1"
black = "^24"
mypy = "^1"
pylint = "^3"
isort = "^5"

[tool.poetry.scripts]
gopro-webcam = "gopro_controller.cli.main:main"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]